--- a/index.html
+++ b/index.html
@@ -13,13 +13,7 @@
 </head>
 
 <body>
-
-    <v_page>
-        <h1>Hello World!</h1>
-        <p>Node.js <span id="node-version"></span>,
-            Chromium <span id="chrome-version"></span>,
-            and Electron <span id="electron-version"></span>.</p>
-    </v_page>
+    <v_page></v_page>
     <!-- You can also require other files to run in this process -->
     <script src="./renderer.js"></script>
 </body>
